Fix overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -685,7 +685,7 @@ button:hover {
 }
 
 #contact .founder {
-  width: 20ch;
+  max-width: 20ch;
   text-align: start;
 }
 
@@ -1015,6 +1015,17 @@ nav .logo svg {
   .founder {
     text-align: center !important;
     font-size: var(--fs-700);
+  }
+}
+
+@media (max-width: 700px) {
+  :root {
+    --fs-900: 68px;
+    --fs-800: 32px;
+  }
+
+  #contact .founders {
+    width: auto;
   }
 }
 
